--- a/Ejobs/templates/aboutUs.html
+++ b/Ejobs/templates/aboutUs.html
@@ -22,12 +22,12 @@ Through constant innovation, incomparable technology and customer care delivered
     </li>
     <li class="about-us-card">
       <div class="about-us-image-wrapper">
-        <img src="https://images.pexels.com/photos/4344614/pexels-photo-4344614.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Jane" class="about-us-image">
+        <img src="https://www.headshotsprague.com/wp-content/uploads/2019/07/Headshots_Prague-emotional-portrait-of-a-smiling-entrepreneur-1.jpg" alt="Jane" class="about-us-image">
       </div>
       <div class="about-us-details">
-        <h2 >Jane Doe</h2>
-        <p class="title">CEO & Founder</p>
-        <p>jane@gmail.com</p>
+        <h2 >Harry Styles</h2>
+        <p class="title">Branch Manager</p>
+        <p>harry@gmail.com</p>
         <p><button class="btn btn-primary">Contact</button></p>
       </div>
     </li>
@@ -36,9 +36,9 @@ Through constant innovation, incomparable technology and customer care delivered
         <img src="https://www.andrewcollings.com/wp-content/uploads/2019/07/002-Chicago-Office-Corporate-Environmental-Portrait.jpg" alt="Jane" class="about-us-image">
       </div>
       <div class="about-us-details">
-        <h2 >Jane Doe</h2>
-        <p class="title">CEO & Founder</p>
-        <p>jane@gmail.com</p>
+        <h2 >James Bond</h2>
+        <p class="title">Digital Marketing Manager</p>
+        <p>james@gmail.com</p>
         <p><button class="btn btn-primary">Contact</button></p>
       </div>
     </li>
