--- a/Ejobs/templates/jobs/appliedjobs.html
+++ b/Ejobs/templates/jobs/appliedjobs.html
@@ -4,6 +4,7 @@
 {% include 'bannerad.html'%}
   <ul class="jobs-cards">
   <h1> Your applied jobs</h1>
+  <h3>(jobs will get deleted if the recruiter accepts or declines your application)</h3>
   {% for job in jobs %}
  
     <li class="jobs-card-wrapper">
