--- a/Ejobs/templates/jobs/jobhome.html
+++ b/Ejobs/templates/jobs/jobhome.html
@@ -42,10 +42,37 @@
       </li>
 
       {% endfor %}
-      <div class="cta">
+       <div class="cta">
         <a href="{% url 'add_job' %}"><button class="btn btn-primary centrebtn">aDD more Jobs</button></a >
       </div>
- >
+
+
+      
+    <div class="paginator">
+    {% if jobs.has_previous %}
+      <a href="?page=1" class="pagination-action"> <i class="fas fa-angle-double-left"></i> </a>
+      <a href="?page={{jobs.previous_page_number}}" class="pagination-action"> <i class="fas fa-angle-left"></i> </a>
+    {% endif %}
+
+
+    {% comment %} {% for num in jobs.paginator.page_range %}
+      {%if jobs.number == num %}
+        <strong>{{ num }}</strong>
+      {% elif num > jobs.number|add:'-3' and num < jobs.number|add:'3' %}
+        {{ num }}
+      {% endif %}
+    {% endfor %} {% endcomment %}
+    {% if jobs.has_next %}
+      <a href="?page={{jobs.next_page_number}}" class="pagination-action"> <i class="fas fa-angle-right"></i> </a>
+      <a href="?page={{jobs.paginator.num_pages}}" class="pagination-action"> <i class="fas fa-angle-double-right"></i> </a>
+    {% endif %}
+    </div>
+
+
+
+
+     
+
     </ul>
   </div>
 </div>
