--- a/Ejobs/templates/seeker/edit_user.html
+++ b/Ejobs/templates/seeker/edit_user.html
@@ -14,7 +14,7 @@
         </div>
         <div class="auth-right">
           <div class="auth-form-wrapper">
-          <h2> Seeker Register</h2>
+          <h2> Edit Profile</h2>
             <form action="{% url 'edit_user_data' %}" method="post" enctype="multipart/form-data">
               {% csrf_token %}
               <div class="form-item">
