--- a/Ejobs/templates/feedback/feedback.html
+++ b/Ejobs/templates/feedback/feedback.html
@@ -32,7 +32,7 @@
                 <input
                   type="text"
                   required="true"
-                  class="form-input"
+                  class="form-input feedback"
                   name="feedback"
                   placeholder="Feedback"
                 />
