--- a/Ejobs/templates/header.html
+++ b/Ejobs/templates/header.html
@@ -7,6 +7,7 @@
       integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/ej.png'%}">
     <script defer src="{% static 'main.js' %}"></script>
   </head>
     <div class="container">
@@ -38,6 +39,7 @@
           {% if user.is_authenticated %}
 
           {% if user.is_staff %}
+          <li class="nav-item"><a class="nav-item-link" href="{% url 'jobhome' %}">Your jobs</a></li>
           <li class="nav-item"><a class="nav-item-link" href="{% url 'applicants' %}">Applicants</a></li>
           <li class="nav-item"><a class="nav-item-link" href="{% url 'profile' %}">Org. Profile</a></li>
           <li class="nav-item"><a class="nav-item-link" id="myBtn" >Logout</a></li>
