--- a/Ejobs/static/styles.css
+++ b/Ejobs/static/styles.css
@@ -10,7 +10,10 @@ textarea,
 input {
   font-family: "Poppins", sans-serif;
 }
-
+select{
+  height:30px;
+  border: none;
+}
 .container {
   padding: 0 10rem;
   /* max-width: 1400px; */
