--- a/Ejobs/templates/seeker/edit_user.html
+++ b/Ejobs/templates/seeker/edit_user.html
@@ -76,6 +76,18 @@
                 />
               </div>
               <div class="form-item">
+              <label for="preferred_job_category">Please select your Preferred Job Category</label>
+              <select name="preferred_job_category" id="preferred_job_category" required="true">
+                <option value="finance">Finance</option>
+                <option value="marketing">Marketing</option>
+                <option value="webdesign ">Webdesign </option>
+                <option value="management ">Management</option>
+                <option value="technology ">Technology</option>
+                <option value="hardware ">Hardware</option>
+                <option value="others ">Others</option>
+              </select>
+              </div>
+              <div class="form-item">
                 <input
                   type="text"
                   class="form-input"
@@ -85,6 +97,7 @@
                   placeholder="enter your bio"
                 />
               </div>
+
               <div class="form-item">
                 <input
                   type="submit"
