--- a/Ejobs/templates/seeker/profile.html
+++ b/Ejobs/templates/seeker/profile.html
@@ -71,7 +71,6 @@
               <h5 class="profile-info-title">Add additional details</h5>
               {% endif %}
 
-
           {% else %}
               <h5 class="profile-info-title">Profile completness</h5>
               <div id="progress">
@@ -129,7 +128,7 @@
             <p class="profile-info-detail  profile-info-detail-cap">{{adddata.work_experience}}</p>
           <li class="profile-info-items">
             <h5 class="profile-info-title">Preferred Job Category</h5>
-            <p class="profile-info-detail  profile-info-detail-cap">{{adddata.preferred_job_category}}</p>
+            <p class="profile-info-detail  profile-info-detail-cap">{{userdata.preferred_job_category}}</p>
           </li>
           <li class="profile-info-items">
             <h5 class="profile-info-title">Preferred location</h5>
