--- a/Ejobs/templates/seeker/seekerDashboard.html
+++ b/Ejobs/templates/seeker/seekerDashboard.html
@@ -74,6 +74,7 @@
   <ul class="jobs-cards">
    <h2>Jobs recommended by the system.
    </h4>
+    {% for rec in records %}
     <li class="jobs-card-wrapper">
       <a href="{% url 'job_details_2' id=rec.job_id %}"> 
         <div class="jobs-top-category">
@@ -106,7 +107,7 @@
         </ul>
       </div>
     </li>
-
+    {% endfor %}
     </ul>
 
 
